[Std/File] Java: fix relpath, copy